--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "npx @biomejs/biome format --write ."
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
